// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-variable.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function foo() {
  var bar = 1;
  delete bar;}

=====================================output=====================================
function foo() {
  var bar = 1;
  delete bar;
}

================================================================================
`;

exports[`eval-arguments.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function myfunc() {
  eval = 1
  arguments = arguments;
}

=====================================output=====================================
function myfunc() {
  eval = 1;
  arguments = arguments;
}

================================================================================
`;

exports[`eval-arguments-binding.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function myfunc() {
  var eval
  var arguments;
}

=====================================output=====================================
function myfunc() {
  var eval;
  var arguments;
}

================================================================================
`;

exports[`labeled-function-declaration.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: function bar() {}

=====================================output=====================================
foo: function bar() {}

================================================================================
`;
